--- a/assets/css/messages.scss
+++ b/assets/css/messages.scss
@@ -7,3 +7,13 @@
   color: #d40e0e;
   background: #d40e0e30;
 }
+
+.success-message{
+  width: 90%;
+  margin: auto;
+  padding: 10px 5px;
+  text-align: center;
+  font-weight: bold;
+  color: #27d40e;
+  background: #43d40e30;
+}
