--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@ body{
   display: grid;
   grid-template-columns: 40% 60%;
   width: 60%;
-  height: 400px;
+  height: auto;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
   border-radius: 5px;
   position: relative;
