--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -44,7 +44,7 @@ body{
   }
   .navigation-items-container{
     .navigation-item{
-      padding: 10px 0px;
+      padding: 10px 5px;
       display: flex;
       align-items: center;
       cursor: pointer;
@@ -58,8 +58,10 @@ body{
       }
     }
     .active{
-      background: #fff;
+      background: #00143e;
+      color: #fff;
       box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
       img{
         background: linear-gradient(to bottom right, #ff248b 0%, #9136c8 100%);
         border-radius: 10px;
@@ -101,16 +103,18 @@ body{
   }
   .widget-section{
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
     justify-content: space-around;
     margin: 30px 0px;
     .widget{
-      width: 20%;
+      width: 100%;
       border-radius: 10px;
       padding: 10px;
       display: grid;
       grid-template-columns: 70% 20%;
       justify-content: space-evenly;
+      margin: 10px 0px;
       .text{
         display: flex;
         flex-direction: column;
