--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -20,7 +20,7 @@ body{
 
 .main{
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 20% 80%;
 }
 
 .navigation-bar{
@@ -74,7 +74,7 @@ body{
 .content{
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: scroll;
   margin: auto;
   .top-bar{
     width: 100%;
