Editing location module to reflect ER

--- a/assets/css/casual.scss
+++ b/assets/css/casual.scss
@@ -43,7 +43,7 @@
           width: 100%;
           margin-bottom: 15px;
         }
-        input, select{
+        input, select, textarea{
           border: 1px solid rgba(#eeeeee, 0.87);
           margin: 10px 0px;
           outline: none;
