--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -73,8 +73,8 @@ body{
 
 .content{
   width: 100%;
-  height: 100%;
-  overflow-x: scroll;
+  height: 100vh;
+  overflow-y: scroll;
   margin: auto;
   .top-bar{
     width: 100%;
