--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -30,6 +30,7 @@ body{
   top: 0;
   left: 0;
   display: flex;
+  overflow-y: scroll;
   flex-direction: column;
   .logo-section{
     width: 80%;
