--- a/assets/css/casual.scss
+++ b/assets/css/casual.scss
@@ -66,6 +66,7 @@
           outline: none;
           transition: 0.2s ease;
           padding: 10px;
+          width: 90%;
           &:focus{
             border: 1px solid rgba(#414141, 0.87);
           }
